Fix alignment of truncated text in tables

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -1219,6 +1219,10 @@ img.ui.avatar,
   display: inline-block;
 }
 
+.ui td .text.truncate {
+  vertical-align: top;
+}
+
 .ui .text.thin {
   font-weight: var(--font-weight-normal);
 }
